--- a/templates/inspection/forms/genInspection.html
+++ b/templates/inspection/forms/genInspection.html
@@ -37,6 +37,6 @@
 {% endif %}
 
 {% if use_minmax %}
-    {% include "inspection/subTemplates/toDelete/../subTemplates/subMinMaxChecker.html" %}
+    {% include "inspection/subTemplates/subMinMaxChecker.html" %}
 {% endif %}
 
