create html vis for dashboard

--- a/templates/nav/nav.html
+++ b/templates/nav/nav.html
@@ -18,6 +18,7 @@
             <li><a href="/inspection/jobReport/">Job Report</a></li>
             <li><a href="/production_and_mold_history/">PHL</a></li>
             <li><a href="/equipment/">Equipment</a></li>
+            <li><a href="/dashboard/errorLog/">Error Log</a></li>
                 <li><a href="/logout">Log out</a></li>
             {% endif %}
         </ul>
