--- a/templates/inspection/subTemplates/subJobInfo.html
+++ b/templates/inspection/subTemplates/subJobInfo.html
@@ -3,9 +3,11 @@
 {% if active_job %}
 
     <div class="panel panel-default">
+        <div class="panel-heading clearfix">
+            <h3 class="panel-title pull-left"> Part Information</h3>
+        </div>
         <div class="panel-body">
             <table class="table table-hover">
-                <caption style="text-align:center">Part Information</caption>
                 <thead>
                 <tr>
                     <th>Item #</th>
@@ -30,9 +32,11 @@
 
 
     <div class="panel panel-default">
+        <div class="panel-heading clearfix">
+            <h3 class="panel-title pull-left">Start Up Shot Information</h3>
+        </div>
         <div class="panel-body">
             <table class="table table-hover">
-                <caption style="text-align:center">Start Up Shot Information</caption>
                 <thead>
                 <tr>
                     <th>Machine Operator</th>
@@ -64,9 +68,11 @@
     </div>
 
     <div class="panel panel-default">
+        <div class="panel-heading clearfix">
+            <h3 class="panel-title pull-left"> Mold Information</h3>
+        </div>
         <div class="panel-body">
             <table class="table table-hover">
-                <caption style="text-align:center">Mold Information</caption>
                 <thead>
                 <tr>
                     <th>Mold ID</th>
