--- a/templates/inspection/reports/partReport.html
+++ b/templates/inspection/reports/partReport.html
@@ -13,55 +13,40 @@
 <div class="col-sm-10 bootcards-cards">
 
 
-    {% for key,value in partDict.items %}
+{#    {% for key,value in partDict.items %}#}
         {#            <div class="panel panel-default bootcards-summary">#}
-        <div class="panel-heading">
-            <h3 class="panel-title text-center">Summary For Job {{ value.startupInfo.0.jobNumber }}</h3>
-        </div>
+{#        <div class="panel-heading">#}
+{#            <h3 class="panel-title text-center">Summary For Job {{ value.startupInfo.0.jobNumber }}</h3>#}
+{#        </div>#}
 
 
-
-            {% if value.startupInfo %}
-                {% with value.startupInfo as active_job %}
+            {% if partDict.activeJob %}
+                {% with partDict.activeJob as active_job %}
                     {% include "inspection/subTemplates/subJobInfo.html" %}
                 {% endwith %}
             {% endif %}
 
-        {% if value.phl %}
-            {% with value.phl as phl %}
-                {% include "inspection/subTemplates/subComments.html" %}
-            {% endwith %}
-        {% endif %}
-
-
-
-            {% if value.visualInspectionDict %}
-                {% with value.visualInspectionDict as visualInspectionDict %}
-                    {% include "inspection/subTemplates/subSummary.html" %}
-                {% endwith %}
-            {% endif %}
-
-
-            {% if value.partWeightInspectionDict %}
-                {% with value.partWeightInspectionDict as partWeightInspectionDict %}
-                    {% include "inspection/subTemplates/subSummary.html" %}
-                {% endwith %}
-            {% endif %}
-
-            {% if value.shotWeightInspectionDict %}
-                {% with value.shotWeightInspectionDict as shotWeightInspectionDict %}
-                    {% include "inspection/subTemplates/subSummary.html" %}
-                {% endwith %}
-            {% endif %}
-
-        {#            </div>#}
-        {% endfor %}
+{#        {% if value.phl %}#}
+{#            {% with value.phl as phl %}#}
+{#                {% include "inspection/subTemplates/subComments.html" %}#}
+{#            {% endwith %}#}
+{#        {% endif %}#}
+{##}
+{#        {% endfor %}#}
 
     {% for key,value in partDict.pf.items %}
             {% with value as pfSummaryDict %}
                 {% include "inspection/subTemplates/subPFItemSummary.html" %}
             {% endwith %}
-{% endfor %}
+    {% endfor %}
+
+    {% for key,value in partDict.rangeTest.items %}
+            {% with value as rangeSummaryDict %}
+                {% include "inspection/subTemplates/subRangeItemSummary.html" %}
+            {% endwith %}
+    {% endfor %}
+
+
 
 </div>
 
