Strip bootcards-richtext from reports

--- a/templates/equipment/subTemplates/equipInfo.html
+++ b/templates/equipment/subTemplates/equipInfo.html
@@ -1,7 +1,7 @@
 
 
 {% if equip_info %}
-<div class="panel panel-default bootcards-richtext">
+<div class="panel panel-default">
         <div class="panel-body">
     <table class="table table-hover">
         <caption style="text-align:center">Equipment Information</caption>
