--- a/templates/phl/reports/mhl.html
+++ b/templates/phl/reports/mhl.html
@@ -18,7 +18,7 @@
     {% include "phl/subtemplates/moldInfo.html" %}
 
     {% if MHL %}
-        <div class="panel panel-default bootcards-richtext">
+        <div class="panel panel-default">
             <div class="panel-body">
                 <table class="table table-hover">
                     <caption style="text-align:center">Mold History Information</caption>
