--- a/templates/equipment/subTemplates/pm_subreport.html
+++ b/templates/equipment/subTemplates/pm_subreport.html
@@ -1,5 +1,5 @@
 {% if PM_info %}
-    <div class="panel panel-default bootcards-richtext">
+    <div class="panel panel-default">
         <div class="panel-body">
             <table class="table table-hover">
                 <caption style="text-align:center">Preventative Maintenance Information</caption>
