--- a/templates/phl/reports/phl.html
+++ b/templates/phl/reports/phl.html
@@ -30,7 +30,7 @@
 
 
                 {% with value.phl as PHL %}
-                    <div class="panel panel-default bootcards-richtext">
+                    <div class="panel panel-default">
                         <div class="panel-body">
                             <table class="table table-hover">
                                 <caption style="text-align:center">Production History Log</caption>
