--- a/templates/phl/subtemplates/moldInfo.html
+++ b/templates/phl/subtemplates/moldInfo.html
@@ -1,5 +1,5 @@
 {% if mold_info %}
-    <div class="panel panel-default bootcards-richtext">
+    <div class="panel panel-default">
         <div class="panel-body">
             <table class="table table-hover">
                 <caption style="text-align:center">Mold Information</caption>
