Remove bootcards-richtext, add report raw data field, add "all" for mold cav ID

--- a/templates/inspection/forms/genInspection.html
+++ b/templates/inspection/forms/genInspection.html
@@ -15,7 +15,7 @@
             {% include "inspection/subTemplates/subJobInfo.html" %}
 
 
-    <div class="panel panel-default bootcards-richtext">
+    <div class="panel panel-default ">
         <div class="panel-heading clearfix">
             <h3 class="panel-title pull-left">{{ form_title }}</h3>
         </div>
