--- a/templates/inspection/searchForms/itemReportSearch.html
+++ b/templates/inspection/searchForms/itemReportSearch.html
@@ -13,7 +13,7 @@
 
 <div class="col-sm-10 bootcards-cards">
     <p>Welcome to the CIMC Inspection Page! Type in an item number to generate a report:</p>
-    <div class="panel panel-default bootcards-richtext">
+    <div class="panel panel-default ">
             {% include "project_form_templates/gen_form.html" %}
     </div>
 </div>
