--- a/templates/equipment/equipment_index.html
+++ b/templates/equipment/equipment_index.html
@@ -12,7 +12,7 @@
 {% include "nav/nav.html" %}
 
 <div class="col-sm-10 bootcards-cards">
-    <div class="panel panel-default bootcards-richtext">
+    <div class="panel panel-default">
         <div class="panel-body">
             <p>Welcome to the CIMC Equipment Page! Click on one of the following equipment types to view more
                 information or record an activity:</p>
