--- a/templates/inspection/detailJob.html
+++ b/templates/inspection/detailJob.html
@@ -130,7 +130,7 @@
 
 
 {##}
-{#    <div class="panel panel-default bootcards-richtext">#}
+{#    <div class="panel panel-default ">#}
 {#        <div class="panel-body">#}
 {#            {% for ep in active_job %}#}
 {#                <ul>#}
