--- a/templates/inspection/forms/partWeightInspection.html
+++ b/templates/inspection/forms/partWeightInspection.html
@@ -15,7 +15,7 @@
 
             {% include "inspection/subTemplates/subJobInfo.html" %}
 
-    <div class="panel panel-default bootcards-richtext">
+    <div class="panel panel-default ">
             {% include "project_form_templates/gen_form.html" %}
     </div>
 
