--- a/templates/inspection/index.html
+++ b/templates/inspection/index.html
@@ -15,7 +15,7 @@
 {% include "nav/nav.html" %}
 
 <div class="col-sm-10 bootcards-cards">
-    <div class="panel panel-default bootcards-richtext">
+    <div class="panel panel-default ">
         <div class="panel-body">
             <p>Welcome to the CIMC Inspection Page! The following machines are active:</p>
 
