--- a/templates/inspection/subTemplates/subRangeInspection.html
+++ b/templates/inspection/subTemplates/subRangeInspection.html
@@ -1,5 +1,5 @@
 {% if rangeDict %}
-        <div class="panel panel-default bootcards-richtext">
+        <div class="panel panel-default">
                 <div class="panel-heading clearfix">
                 <h3 class="panel-title pull-left"> {{ rangeDict.0.rangeTestName }} </h3>
                 </div>
@@ -10,7 +10,6 @@
                         <th>Machine Operator</th>
                         <th>Inspector</th>
                         <th>Date</th>
-                        <th>Inspection Result</th>
                         <th>Cav</th>
                         <th>Test Value </th>
                     </tr>
@@ -27,10 +26,7 @@
                             <td>
                                 {{ ep.dateCreated }}
                             </td>
-                            <td>
-                                {{ ep.isFullShot|yesno:"Yes,No,No" }}
-                            </td>
-                            <td> {{ ep.headCavID }}</td>
+                            <td> {{ ep.headCavID|default_if_none:"Full Shot" }}</td>
                             <td> {{ ep.numVal }}  </td>
                         </tr>
                     {% endfor %}
