Remove rich-text

--- a/templates/phl/forms/phlForm.html
+++ b/templates/phl/forms/phlForm.html
@@ -18,7 +18,7 @@
     <p>Record a production related event.</p>
 
 
-    <div class="panel panel-default bootcards-richtext">
+    <div class="panel panel-default ">
             {% include "project_form_templates/gen_form.html" %}
     </div>
 </div>
