--- a/templates/equipment/forms/pm.html
+++ b/templates/equipment/forms/pm.html
@@ -19,7 +19,7 @@
 <div class="col-sm-10 bootcards-cards">
     {% include "equipment/subTemplates/equipInfo.html" %}
 
-    <div class="panel panel-default bootcards-richtext">
+    <div class="panel panel-default ">
         <div class="panel-body">
             {% include "project_form_templates/gen_form.html" %}
             </div>
