--- a/templates/equipment/forms/repair.html
+++ b/templates/equipment/forms/repair.html
@@ -15,7 +15,7 @@
     {% include "equipment/subTemplates/equipInfo.html" %}
 
 
-    <div class="panel panel-default bootcards-richtext">
+    <div class="panel panel-default ">
             {% include "project_form_templates/gen_form.html" %}
     </div>
 </div>
