--- a/templates/equipment/reports/equipment_repair_report.html
+++ b/templates/equipment/reports/equipment_repair_report.html
@@ -18,7 +18,7 @@
 <div class="col-sm-10 bootcards-cards">
     {% include "equipment/subTemplates/equipInfo.html" %}
     {% if repair_info %}
-        <div class="panel panel-default bootcards-richtext">
+        <div class="panel panel-default ">
             <div class="panel-body">
                 <table class="table table-hover">
                     <caption style="text-align:center">Repair Information</caption>
