--- a/templates/phl/forms/moldForm.html
+++ b/templates/phl/forms/moldForm.html
@@ -13,7 +13,7 @@
 <div class="col-sm-10 bootcards-cards">
     {% include "phl/subtemplates/moldInfo.html" %}
 
-    <div class="panel panel-default bootcards-richtext">
+    <div class="panel panel-default ">
             {% include "project_form_templates/gen_form.html" %}
     </div>
 </div>
