--- a/templates/phl/forms/moldLookup.html
+++ b/templates/phl/forms/moldLookup.html
@@ -14,7 +14,7 @@
 
 <div class="col-sm-10 bootcards-cards">
     <p>Type in a mold number to record tooling related event.</p>
-    <div class="panel panel-default bootcards-richtext">
+    <div class="panel panel-default ">
             {% include "project_form_templates/gen_form.html" %}
     </div>
 </div>
