--- a/templates/phl/forms/phlLookup.html
+++ b/templates/phl/forms/phlLookup.html
@@ -15,7 +15,7 @@
 
 <div class="col-sm-10 bootcards-cards">
     <p>Type in a job number view a production history log.</p>
-    <div class="panel panel-default bootcards-richtext">
+    <div class="panel panel-default ">
             {% include "project_form_templates/gen_form.html" %}
     </div>
 </div>
