--- a/templates/phl/index.html
+++ b/templates/phl/index.html
@@ -15,7 +15,7 @@
 
 
 <div class="col-sm-10 bootcards-cards">
-    <div class="panel panel-default bootcards-richtext">
+    <div class="panel panel-default ">
         <div class="panel-body">
             <p>Welcome to the Production History Log Page!</p>
         </div>
