--- a/templates/phl/phl_index.html
+++ b/templates/phl/phl_index.html
@@ -14,7 +14,7 @@
 {% include "nav/nav.html" %}
 
 <div class="col-sm-10 bootcards-cards">
-    <div class="panel panel-default bootcards-richtext">
+    <div class="panel panel-default ">
         <div class="panel-body">
             <p>Welcome to the Production History Log Page!</p>
         </div>
