--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -12,7 +12,7 @@
 {% include "nav/nav.html" %}
 
 <div class="col-sm-10 bootcards-cards">
-    <div class="panel panel-default bootcards-richtext">
+    <div class="panel panel-default ">
         <div class="panel-heading clearfix">
             <h3 class="panel-title pull-left">Please login</h3>
         </div>
