--- a/templates/startupshot/view.html
+++ b/templates/startupshot/view.html
@@ -16,7 +16,7 @@
 
 
 <div class="col-sm-10 bootcards-cards">
-    <div class="panel panel-default bootcards-richtext">
+    <div class="panel panel-default ">
         <div class="panel-body">
 
             {% if different_shot_list %}
