--- a/templates/startupshot/viewActive.html
+++ b/templates/startupshot/viewActive.html
@@ -13,7 +13,7 @@
 
 
 <div class="col-sm-10 bootcards-cards">
-    <div class="panel panel-default bootcards-richtext">
+    <div class="panel panel-default ">
         <div class="panel-body">
             <p>Welcome to the CIMC Startup Shot Page! The following machines are active:</p>
         </div>
