Add checking to startup shot

--- a/templates/startupshot/createStartupShot.html
+++ b/templates/startupshot/createStartupShot.html
@@ -17,13 +17,12 @@
 
     <div class="panel panel-default">
         <div class="panel-body">
-
             {% include "project_form_templates/gen_form.html" %}
-
         </div>
     </div>
-
 
 </div>
 </body>
 </html>
+
+{% include "inspection/subTemplates/subMinMaxChecker.html" %}
