Add pass/fail to range inspection

--- a/templates/inspection/forms/genInspection.html
+++ b/templates/inspection/forms/genInspection.html
@@ -40,3 +40,6 @@
     {% include "inspection/subTemplates/subMinMaxChecker.html" %}
 {% endif %}
 
+{% if id_result %}
+    {% include "inspection/subTemplates/subCheckRange.html" %}
+{% endif %} 
