--- a/templates/inspection/subTemplates/subRangeInspection.html
+++ b/templates/inspection/subTemplates/subRangeInspection.html
@@ -11,7 +11,7 @@
                         <th>Inspector</th>
                         <th>Date</th>
                         <th>Cav</th>
-                        <th>Test Value </th>
+                        <th>Measurement </th>
                     </tr>
                     </thead>
                     <tbody>
