--- a/templates/inspection/subTemplates/subCheckRange.html
+++ b/templates/inspection/subTemplates/subCheckRange.html
@@ -1,8 +1,8 @@
-<script>
-    $( document ).ready(function() {
-        $('{{id_result}}').prop('onclick','return false');
-});
-</script>
+{#<script>#}
+{#    $( document ).ready(function() {#}
+{#        $('{{id_result}}').prop('onclick','return false');#}
+{#});#}
+{#</script>#}
 
 
 <script>
