--- a/templates/inspection/reports/jobReport.html
+++ b/templates/inspection/reports/jobReport.html
@@ -15,10 +15,10 @@
 
 
 <div class="col-sm-10 bootcards-cards">
+    {% include "reportHeaderFooter/reportHeader.html" %}
     {% include "inspection/subTemplates/subJobInfo.html" %}
     {% include "inspection/subTemplates/subSummary.html" %}
     {% include "inspection/subTemplates/subComments.html" %}
-
 
 </div>
 
