--- a/templates/inspection/reports/partReport.html
+++ b/templates/inspection/reports/partReport.html
@@ -12,6 +12,7 @@
 
 <div class="col-sm-10 bootcards-cards">
 
+    {% include "reportHeaderFooter/reportHeader.html" %}
 
             {% if partDict.activeJob %}
                 {% with partDict.activeJob as active_job %}
