Add report header to item and job reports

--- a/templates/inspection/subTemplates/subRangeSummary.html
+++ b/templates/inspection/subTemplates/subRangeSummary.html
@@ -30,8 +30,10 @@
             {% endfor %}
             </tbody>
             </table>
-            Note: The resulting statistics take cavitation into account if a full shot was entered.
         </div>
+      <div class="panel-footer">
+        <small>Note: The resulting statistics take cavitation into account if a full shot was entered.</small>
+    </div>
     </div>
 {% endif %}
 
