--- a/templates/inspection/reports/partReport.html
+++ b/templates/inspection/reports/partReport.html
@@ -12,7 +12,9 @@
 
 <div class="col-sm-10 bootcards-cards">
 
+    {% with partDict.headerDict as headerDict %}
     {% include "reportHeaderFooter/reportHeader.html" %}
+    {% endwith %}
 
             {% if partDict.activeJob %}
                 {% with partDict.activeJob as active_job %}
