--- a/templates/reportHeaderFooter/reportHeader.html
+++ b/templates/reportHeaderFooter/reportHeader.html
@@ -3,8 +3,8 @@
   <div class="panel-heading clearfix">
     <h3 class="panel-title pull-left">{{ headerDict.companyName }}</h3>
   </div>
-  <div class="panel-body">
-    <p>{{ headerDict.reportName }}</p>
+  <div class="panel-body text-center">
+    <h2>{{ headerDict.reportName }}</h2>
   </div>
   <div class="panel-footer">
     <small>{{ headerDict.documentName }}</small>
