--- a/templates/dashboard/errorLog.html
+++ b/templates/dashboard/errorLog.html
@@ -62,3 +62,11 @@
 
 </body>
 </html>
+
+<script src="http://d3js.org/d3.v3.min.js"></script>
+<script>
+    d3.csv("/dashboard/jsonError", type, function(error, data) {
+        if (error) throw error;
+        console.log(data);
+    });
+</script>
