Add chart to static and implement something cool for job reports

--- a/templates/nav/nav.html
+++ b/templates/nav/nav.html
@@ -32,4 +32,4 @@
 <script src="{% static "bootstrap/bootstrap.min.js" %}"></script>
 <script src="{% static "bootcard/js/bootcards.min.js" %}"></script>
 
-{#added production log#}
+{#added production log now #}
