--- a/templates/dashboard/errorProdLog.html
+++ b/templates/dashboard/errorProdLog.html
@@ -14,6 +14,7 @@
 {% include "nav/nav.html" %}
 
 {% if prodErrors %}
+    <div class="col-sm-10 bootcards-cards">
     <div class="panel panel-default">
         <div class="panel-body">
             <table class="table table-hover">
