--- a/templates/inspection/subTemplates/sub_error_bar_chart.html
+++ b/templates/inspection/subTemplates/sub_error_bar_chart.html
@@ -1,3 +1,5 @@
+
+{% if plotinfo %}
  <div class="panel panel-default">
         <div class="panel-heading clearfix">
             <h3 class="panel-title pull-left">Errors</h3>
@@ -6,5 +8,6 @@
             <div id="chartdiv"></div>
         </div>
      </div>
+{% endif %}
 
 
