--- a/templates/inspection/subTemplates/sub_error_bar_chart_js.html
+++ b/templates/inspection/subTemplates/sub_error_bar_chart_js.html
@@ -1,3 +1,5 @@
+{% if plot_info %}
+
 {% load staticfiles %}
 <script src="{% static "amcharts_3/amcharts/amcharts.js" %}"></script>
 <script src="{% static "amcharts_3/amcharts/serial.js" %}"></script>
@@ -45,3 +47,5 @@ var chart = AmCharts.makeChart( "chartdiv", {
 })
 </script>
 
+
+{% endif %}
