Change CIMC on page to CMG

--- a/templates/inspection/index.html
+++ b/templates/inspection/index.html
@@ -17,7 +17,7 @@
 <div class="col-sm-10 bootcards-cards">
     <div class="panel panel-default ">
         <div class="panel-body">
-            <p>Welcome to the CIMC Inspection Page! The following machines are active:</p>
+            <p>Welcome to the CMG Inspection Page! The following machines are active:</p>
 
         </div>
     </div>
