--- a/templates/equipment/index.html
+++ b/templates/equipment/index.html
@@ -13,7 +13,7 @@
 <div class="col-sm-10 bootcards-cards">
     <div class="panel panel-default">
         <div class="panel-body">
-            <p>Welcome to the CIMC Equipment Page! Click on one of the following equipment types to view more
+            <p>Welcome to the CMG Equipment Page! Click on one of the following equipment types to view more
                 information or record an activity:</p>
         </div>
     </div>
