--- a/templates/inspection/searchForms/itemReportSearch.html
+++ b/templates/inspection/searchForms/itemReportSearch.html
@@ -12,7 +12,7 @@
 
 
 <div class="col-sm-10 bootcards-cards">
-    <p>Welcome to the CIMC Inspection Page! Type in an item number to generate a report:</p>
+    <p>Welcome to the CMG Inspection Page! Type in an item number to generate a report:</p>
     <div class="panel panel-default ">
             {% include "project_form_templates/gen_form.html" %}
     </div>
