Add cmg logo to title page

--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -20,8 +20,7 @@
             <img src="{% static "images/CMGlogo-white-BG.jpg" %}" style="height:200px">
 
             <h1>Welcome to the CMG Intranet</h1>
-
-            <p> Still under construction.</p>
+            <p>Use the links on the left side of the page to navigate the WebApp.</p>
         </div>
     </div>
 </div>
