--- a/templates/404.html
+++ b/templates/404.html
@@ -14,7 +14,7 @@
 <div class="col-sm-10 bootcards-cards">
     <div class="panel panel-default">
         <div style="text-align:center">
-            <h1>Error!t</h1>
+            <h1>Error!</h1>
             <img src="{% static "media/dilbert_error.jpg" %}" style="height:200px">
             <p>You may have searched for something that does not exist</p>
         </div>
