--- a/templates/equipment/equipment_index.html
+++ b/templates/equipment/equipment_index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Equipment Index</title>
+    <title>CMG QMS - Equipment Index [{{ request.user.username }}]</title>
 </head>
 <body>
 
@@ -14,7 +14,7 @@
 <div class="col-sm-10 bootcards-cards">
     <div class="panel panel-default">
         <div class="panel-body">
-            <p>Welcome to the CMG Equipment Page! Click on one of the following equipment types to view more
+            <p>Welcome to the CMG QMS Equipment Maintenance Page! Click on one of the following equipment types to view more
                 information or record an activity:</p>
         </div>
     </div>
