--- a/templates/equipment/forms/repair.html
+++ b/templates/equipment/forms/repair.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Repair</title>
+    <title>CMG QMS - Repair Form [{{ request.user.username }}]</title>
 </head>
 <body>
 
