--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>CMG QMS - Home [{{ request.user.username }}]</title>
     <title>My Home Page</title>
     {#    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}css/style.css" media="screen" />#}
 </head>
