--- a/templates/inspection/reports/partReport.html
+++ b/templates/inspection/reports/partReport.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Part Report</title>
+    <title>CMG QMS - Part Report [{{ request.user.username }}]</title>
 </head>
 <body>
 
