--- a/templates/inspection/searchForms/jobReportSearch.html
+++ b/templates/inspection/searchForms/jobReportSearch.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Job Report Search</title>
+    <title>CMG QMS - Job Report Search [{{ request.user.username }}]</title>
 </head>
 <body>
 
