--- a/templates/phl/phl_index.html
+++ b/templates/phl/phl_index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>PHL Index</title>
+    <title>CMG QMS - Production History Log Index [{{ request.user.username }}]</title>
 </head>
 <body>
 
