--- a/templates/phl/reports/phl.html
+++ b/templates/phl/reports/phl.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>PHL</title>
+    <title>CMG QMS - Production History Log [{{ request.user.username }}]</title>
 </head>
 <body>
 
