--- a/templates/startupshot/createStartupShot.html
+++ b/templates/startupshot/createStartupShot.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Create Startup Shot</title>
+    <title>CMG QMS - Startup Shot Form [{{ request.user.username }}]</title>
 </head>
 <body>
 
