--- a/templates/startupshot/startUpShotSearch.html
+++ b/templates/startupshot/startUpShotSearch.html
@@ -4,8 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Startup Shot Search</title>
-
+    <title>CMG QMS - Startup Shot Search [{{ request.user.username }}]</title>
 </head>
 <body>
 
