Add user name to titles

--- a/templates/inspection/subTemplates/sub_error_bar_chart.html
+++ b/templates/inspection/subTemplates/sub_error_bar_chart.html
@@ -1,5 +1,5 @@
 
-{% if plotinfo %}
+{% if plot_info %}
  <div class="panel panel-default">
         <div class="panel-heading clearfix">
             <h3 class="panel-title pull-left">Errors</h3>
