Add user name to titles

--- a/templates/dashboard/errorLog.html
+++ b/templates/dashboard/errorLog.html
@@ -103,7 +103,7 @@
 
       console.log(result['errors']);
       myBarChart(result['errors'], "chartdiv", "error_count", "error_name");
-      myBarChart(result['mach'], "chartdiv", "mach_count", "mach_name");
+      myBarChart(result['mach'], "chartdiv2", "mach_count", "mach_name");
   }
 });
 </script>
