--- a/templates/dashboard/errorLog.html
+++ b/templates/dashboard/errorLog.html
@@ -22,11 +22,15 @@
 
 <div class="col-sm-10 bootcards-cards">
  <div class="panel panel-default">
-        <div class="panel-body">
-    <div id="chartdiv"></div>
+     <div class="panel-body">
+        <div id="chartdiv"></div>
+    </div>
+ </div>
 
-            <div id="chartdiv2"></div>
-        </div>
+<div class="panel panel-default">
+     <div class="panel-body">
+        <div id="chartdiv2"></div>
+    </div>
  </div>
 
 {% if prodErrors %}
