Add user name to titles

--- a/templates/dashboard/errorLog.html
+++ b/templates/dashboard/errorLog.html
@@ -117,7 +117,7 @@
 
 
 <script>
-    function myBarChart(my_JSON, chartID, x_axis_id, y_axis_id) {
+    function myBarChart(my_JSON, chartID, y_axis_id, x_axis_id) {
 var chart = AmCharts.makeChart( chartID, {
   "type": "serial",
   "theme": "light",
