--- a/templates/dashboard/errorLog.html
+++ b/templates/dashboard/errorLog.html
@@ -10,7 +10,13 @@
 <style>
 #chartdiv {
 	width		: 100%;
-	height		: 500px;
+	height		: 350px;
+	font-size	: 11px;
+}
+
+#chartdiv2 {
+	width		: 100%;
+	height		: 350px;
 	font-size	: 11px;
 }
 </style>
